refactor-radical - começo da reconstrução da Pessoa